# Duda-Discord-Bot

./: .gitignore  README.md  help.py  main.py  manager.py  pyproject.toml  requirements.txt
Commands/: channel.py  openAI.py  openAIChannel.py  watchTogether.py
Docker/: docker-compose.yml
Services/: operationChannel.py
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/Commands/: openAI.py  openAIChannel.py  talks.py  watchTogether.py
src/Service/: operationChannel.py
src/Views/: deleteButton.py
